--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.10.1",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.55",
-    "@material-ui/pickers": "3.2.10",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
     "@reduxjs/toolkit": "1.6.2",
     "classnames": "2.3.1",
-    "connected-react-router": "6.8.0",
+    "connected-react-router": "6.9.1",
     "fontfaceobserver": "2.1.0",
     "history": "4.10.1",
-    "i18next": "21.4.0",
+    "i18next": "21.5.2",
     "i18next-browser-languagedetector": "6.1.2",
     "loaders.css": "0.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.1.2",
-    "react-i18next": "11.13.0",
+    "react-i18next": "11.14.2",
     "react-loaders": "3.0.1",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "sanitize.css": "13.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "react-toastify": "8.0.3",
+    "redux-injectors": "1.3.0",
+    "redux-saga": "1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -87,9 +88,6 @@
     "prettier": "2.4.1",
     "react-app-polyfill": "2.0.0",
     "react-test-renderer": "17.0.2",
-    "react-toastify": "8.0.3",
-    "redux-injectors": "1.3.0",
-    "redux-saga": "1.1.3",
     "replace-in-file": "6.3.2",
     "serve": "11.3.2",
     "shelljs": "0.8.4",
