--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "checkTs": "tsc --noEmit",
     "eslint": "eslint --ext js,ts,tsx",
     "lint": "yarn eslint -- src",
-    "lint:fix": "yarn eslint -- --fix src",
+    "lint:format": "yarn eslint -- --fix src",
     "lint:css": "stylelint src/**/*.css",
     "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts"
   },
@@ -66,11 +66,11 @@
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@types/fontfaceobserver": "2.1.0",
-    "@types/history": "4.7.6",
-    "@types/jest": "25.2.3",
-    "@types/node": "14.0.11",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
+    "@types/history": "4.7.9",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.35",
+    "@types/react-dom": "17.0.11",
     "@types/react-helmet": "6.1.4",
     "@types/react-redux": "7.1.20",
     "@types/react-router-dom": "5.3.2",
@@ -82,16 +82,16 @@
     "eslint-plugin-prettier": "4.0.0",
     "husky": "7.0.4",
     "jest-styled-components": "7.0.5",
-    "lint-staged": "11.2.6",
+    "lint-staged": "12.0.2",
     "node-plop": "0.25.0",
     "plop": "2.6.0",
     "prettier": "2.4.1",
     "react-app-polyfill": "2.0.0",
     "react-test-renderer": "17.0.2",
     "replace-in-file": "6.3.2",
-    "serve": "11.3.2",
+    "serve": "13.0.2",
     "shelljs": "0.8.4",
-    "stylelint": "13.6.0",
+    "stylelint": "14.1.0",
     "stylelint-config-recommended": "6.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
