--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.1.1",
+    "@mui/material": "5.1.1",
     "@reduxjs/toolkit": "1.6.2",
     "classnames": "2.3.1",
     "connected-react-router": "6.9.1",
     "fontfaceobserver": "2.1.0",
-    "history": "4.10.1",
+    "history": "5.1.0",
     "i18next": "21.5.2",
     "i18next-browser-languagedetector": "6.1.2",
     "loaders.css": "0.1.2",
@@ -21,18 +23,16 @@
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "sanitize.css": "13.0.0",
-    "styled-components": "^5.3.3",
     "react-toastify": "8.1.0",
     "redux-injectors": "1.3.0",
-    "redux-saga": "1.1.3"
+    "redux-saga": "1.1.3",
+    "sanitize.css": "13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/test-generators.ts",
     "start:prod": "yarn build && serve -s build",
     "checkTs": "tsc --noEmit",
     "eslint": "eslint --ext js,ts,tsx",
@@ -78,6 +78,7 @@
     "@types/styled-components": "^5.1.15",
     "@types/testing-library__jest-dom": "5.14.1",
     "@types/webpack-env": "1.16.3",
+    "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "7.0.4",
@@ -91,12 +92,7 @@
     "replace-in-file": "6.3.2",
     "serve": "13.0.2",
     "shelljs": "0.8.4",
-    "stylelint": "14.1.0",
-    "stylelint-config-recommended": "6.0.0",
-    "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.4.0",
-    "cross-env": "7.0.3",
     "typescript": "4.4.4"
   }
 }
