--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@mui/material": "5.1.1",
     "@reduxjs/toolkit": "1.6.2",
     "classnames": "2.3.1",
-    "connected-react-router": "6.8.0",
+    "connected-react-router": "6.9.1",
     "fontfaceobserver": "2.1.0",
     "history": "4.10.1",
     "i18next": "21.5.2",
     "i18next-browser-languagedetector": "6.1.2",
+    "immutable": "^4.0.0",
     "loaders.css": "0.1.2",
+    "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.1.2",
@@ -26,7 +28,8 @@
     "react-toastify": "8.1.0",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
-    "sanitize.css": "13.0.0"
+    "sanitize.css": "13.0.0",
+    "seamless-immutable": "^7.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@types/fontfaceobserver": "2.1.0",
@@ -79,10 +83,11 @@
     "@types/testing-library__jest-dom": "5.14.1",
     "@types/webpack-env": "1.16.3",
     "cross-env": "7.0.3",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-config-react": "1.1.7",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "7.0.4",
-    "lint-staged": "12.0.2",
     "node-plop": "0.25.0",
     "plop": "2.6.0",
     "prettier": "2.4.1",
